Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-30288

QtC freezes when using nested CMakePresets

XMLWordPrintable

    • Windows
    • 7f1e16172 (13.0)

      This setup was inspired by https://github.com/o3de/o3de/tree/development/cmake/Platform 

      NestedCMakePresets.zip

      QtCreator freezes for about 30+ seconds before I can select my CMakePreset. It also displays presets that are disabled (linux-clang-release) on Windows. Also, the qml debugging option in missing:

      qtcreator_3cEq6IN7vO.mp4

       

        1. qtcreator_3cEq6IN7vO.mp4
          1.66 MB
        2. image-2024-02-02-11-26-19-623.png
          image-2024-02-02-11-26-19-623.png
          112 kB
        3. NestedCMakePresets.zip
          9 kB
        4. CMakePresets.json
          0.4 kB
        For Gerrit Dashboard: QTCREATORBUG-30288
        # Subject Branch Project Status CR V

            cadam Cristian Adam
            kelteseth Elias Steurer
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes