CMakePM: Traverse the whole inheritance tree for Presets

Regarding QTCREATORBUG-30288, before this change I was getting on macOS
presets for Linux and Windows.

Fixes: QTCREATORBUG-30236
Fixes: QTCREATORBUG-30288
Change-Id: I4772ab7d14dec857b68164d4c24e6e904f20c88b
Reviewed-by: Alessandro Portale <alessandro.portale@qt.io>